# QinkaComputingSubprogram

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  stack.yaml
.ci/: travis_ci_script.sh
bindings/: .gitignore
bindings/hQinkaCS/: ChangeLog.md  hQinkaCS.cabal
bindings/hQinkaCS-binding/: ChangeLog.md  hQinkaCS-binding.cabal
bindings/hQinkaCS-binding/debian/: changelog  control  copyright  rules  watch
bindings/hQinkaCS-binding/src/Accelerate/QinkaCS/Binding/: ActivationFunction.chs  BasicFunction.chs  ComputerVision.chs  Fill.chs  HyperbolicFunction.chs  MatrixFunction.chs  QinkaComputingSubprogram.chs  TrigonometricFunction.chs
bindings/hQinkaCS/debian/: changelog  control  copyright  rules  watch
bindings/hQinkaCS/src/Accelerate/QinkaCS/: Exception.hs  LoadImg.hs  QinkaComputingSubprogram.hs  TH.hs  Tensor.hs  Wrapper.hs
bindings/hQinkaCS/src/Accelerate/QinkaCS/BLAS/: BasicFunction.hs  HyperbolicFunction.hs  MatrixFunction.hs  TrigonometricFunction.hs
bindings/hQinkaCS/src/Accelerate/QinkaCS/Buffer/: Fill.hs
bindings/hQinkaCS/src/Accelerate/QinkaCS/CV/: ComputerVision.hs
bindings/hQinkaCS/src/Accelerate/QinkaCS/LoadImg/: CUDA.hs
bindings/hQinkaCS/src/Accelerate/QinkaCS/ML/: ActivationFunction.hs
debian/: .gitignore  changelog.in.in  control  copyright  libqinkacs-dev.install  libqinkacs-runtime.install  rules
include/: config.h  config_gen.h.in  sequence_inline_function.h  test_prelude.h
include/qinka_cs/: qinka_computing_subprogram.h
include/qinka_cs/blas/: basic_function.h  hyperbolic_function.h  matrix_function.h  trigonometric_function.h
include/qinka_cs/buffer/: fill.h
include/qinka_cs/cv/: computer_vision.h
include/qinka_cs/ml/: activation_function.h
source/: activation_function.c  basic_function.c  computer_vison.c  fill.c  hyperbolic_function.c  matrix_function.c  qinka_computing_subprogram.c  trigonometric_function.c
test/: activation_function_test.cc  basic_function_test.cc  computer_vision_test.cc  fill_test.cc  hyperbolic_function_test.cc  matrix_function_test.cc  qcs_config_test.cc  test_prelude.cc  trigonometric_function_test.cc
